# PopuLyze

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  ruff.toml
app/: logger.py  main.py
app/controller/: main_controller.py  video_controller.py
app/model/: video_service.py  video_stream.py  video_streamer_mpv.py
app/utils/: paths.py
app/view/: camera_view.py  custom_widgets.py  data_view.py  main_window.py  map_view.py  status_view.py
